# cardano_assignment

./: README.md  makefile
BE/: create_dummy_db.py  dummy_db.json  pyproject.toml  test.db
BE/app/: database.py  main.py  models.py  schemas.py
BE/app/routes/: users.py
FE/: package-lock.json  package.json
FE/src/DTOs/: user.ts
FE/src/app/: page.tsx
FE/src/components/: buttonStateIcon.tsx  confirmPopover.tsx  innerPage.tsx  multiState.tsx  profileForm.tsx  submitButton.tsx  usersTable.tsx
FE/src/lib/: errors.ts  renderingUtils.tsx
FE/src/lib/api/: users.ts
