[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Fosco <foscocanc@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
start = "app.run"


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.30"
databases = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
